# json-schema-rs

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
data/: canada-schema.json  canada-small.json
examples/: simple.rs
src/: array.rs  boolean.rs  de.rs  errors.rs  integer.rs  lib.rs  main.rs  number.rs  object.rs  reference.rs  schema.rs  string.rs  util.rs
