[package]
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
name = "json_schema"
version = "0.1.0"

[dependencies]
error-chain = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2"
chrono = "0.3"

[dependencies.clippy]
optional = true
version = "*"

[features]
default = []
