[package]
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
name = "json_schema"
version = "0.1.0"

[dependencies]
chrono = "0.4"
error-chain = "0.11"
quote = "0.3.15"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.4"

[dependencies.clippy]
optional = true
version = "*"

[features]
default = []
